# smol-tui-rs

./: Cargo.toml  README.md  rust-toolchain.toml.disabled
examples/: Cargo.toml  examples_common.rs  frame_accessor.rs  scene.rs  subframe.rs  widgets.rs
examples/src/: examples_common.rs
smol-tui-derive/: Cargo.toml
smol-tui-derive/src/: common.rs  lib.rs  scene.rs  widget.rs
src/: frame_accessor.rs  lib.rs  scene.rs  widget.rs  widgets.rs
