[package]
name = "smol-tui-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"

[dev-dependencies]
termion = "1.5.6"

[[example]]
name = "examples_common"
crate-type = ["lib"]