[package]
name = "smol-tui-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
darling = "0.13.1"
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.34"

[lib]
proc-macro = true